fixing not centered display because of footer

--- a/styles.scss
+++ b/styles.scss
@@ -232,12 +232,11 @@ main{
     width: 70vw;
 
     @include media-max(768px) {
-      width: 100%;
+      width: 100vw;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      margin-left: 20px;
     }
   }
   #hero{
@@ -547,7 +546,6 @@ footer {
   padding: 10px;
   color: #fff;
   text-align: center;
-  width: 100%;
   height: 120px;
   display: flex;
   align-items: center;
